Add landing page solution

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <title>Welcome To The Beach</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <header class="header">
     <h1>Welcome To The Beach</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, modi adipisci magni consequatur ad quasi.</p>
-    <a href="#">Read More</a>
+    <p class="p-header">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, modi adipisci magni consequatur ad quasi.</p>
+    <a href="#" class="a">Read More</a>
  </header>
  <main>
    <section class="section1">
@@ -20,18 +20,11 @@
    <section class="section2">
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus itaque non alias repudiandae sunt similique tempora nulla dolorum modi! Aut unde dolorem dolore incidunt libero quae modi numquam amet, non minus provident repellendus ea! Maxime sint repellendus nihil ea quod facere labore pariatur obcaecati. Adipisci pariatur temporibus sequi quae sed, mollitia cupiditate excepturi, vel tenetur quos quas. Itaque voluptatum dignissimos quo voluptate nostrum cupiditate deserunt necessitatibus impedit! Voluptatum perspiciatis nulla, quod soluta laudantium inventore praesentium porro quis pariatur excepturi qui iure quo perferendis ratione! Inventore vel eveniet tempore pariatur, facilis asperiores consectetur necessitatibus delectus? Alias ipsum quo nobis natus porro.</p>
    </section>
-   <section class="section3">
-     <div>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reiciendis officia mollitia tempora nostrum consequatur eos dicta quia corporis voluptatibus?</p>
-     </div>
-     <div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reiciendis officia mollitia tempora nostrum consequatur eos dicta quia corporis voluptatibus?</p>
-    </div>
-    <div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reiciendis officia mollitia tempora nostrum consequatur eos dicta quia corporis voluptatibus?</p>
-    </div>
+   <section >
+       <p class="p p-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reiciendis officia mollitia tempora nostrum consequatur eos dicta quia corporis voluptatibus?</p>
+      <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reiciendis officia mollitia tempora nostrum consequatur eos dicta quia corporis voluptatibus?</p>
+      <p class="p p-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reiciendis officia mollitia tempora nostrum consequatur eos dicta quia corporis voluptatibus?</p> 
    </section>
- </main>
-  
+ </main> 
 </body>
 </html>
